color picker added

--- a/Question2_Ans/style.css
+++ b/Question2_Ans/style.css
@@ -10,6 +10,7 @@ table{
     margin-left: 5rem;
     height: 70vh;
     font-size: 1.2rem;
+    font-family: sans-serif;
 }
 input{
    font-size: 1.2rem; 
